--- a/index.html
+++ b/index.html
@@ -54,16 +54,12 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Mesa Redonda: "Libros en Lugar de Armas"<br />
+								             SALALM 2019</h2>
+								<p>Las bibliotecas públicas colombianas han sido reconocidas como motores de paz en el país. Esta mesa invita a bibliotecari@s de distintas regiones para discutir qué significa construir paz desde la biblioteca. Mediante grupos de lectura, talleres de escritura y otras actividades participativas, ¿cómo han podido los bibliotecarios y usuarios de la biblioteca hacerle frente a diversos regímenes de violencia?  ¿Ven su trabajo en términos de construcción de paz, o algo distinto? ¿Hasta qué punto se puede hablar de la paz en comunidades afectadas por desigualdades sociales, violencias estructurales y nuevos conflictos que no se han paliado en tiempos marcados por el discurso del “posconflicto”? Esperamos que los participantes reflexionen acerca del papel de la biblioteca en la producción de plataformas alternativas de comunicación y expresión artística; la preservación de la memoria local; la inclusión de sujetos marginados; y los procesos de reconciliación en pequeña escala. De acuerdo con el tema del seminario, estos ejes temáticos también servirán como punto de partida para pensar la relación entre el patrimonio cultural y la construcción de paz en Colombia.
+								</p>
 							</header>
-							<ul class="icons major">
-								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
-							</ul>
+					
 						</div>
 					</section>
 
