--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@ layout: landing
 					<section id="banner">
 						<div class="inner">
                             <h2>{{ site.title }}</h2>
-                            <p>{{ site.description }}</p>
+                            
 							<ul class="actions special">
-								<li><a href="exhibit-a.html" class="button primary">Entrar</a></li>
+								<li><a href="exhibit-a.html" class="button primary">Un Archivo Viviente</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Más información</a>
@@ -18,7 +18,7 @@ layout: landing
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Mesa Redonda: "Libros en Lugar de Armas"<br />
+								<h2>"Libros en Lugar de Armas"<br />
 											 SALALM 2019</h2>
 								                <p align="left">Las bibliotecas públicas colombianas han sido reconocidas como motores de paz en el país. Esta mesa invita a bibliotecari@s de distintas regiones para discutir qué significa construir paz desde la biblioteca. Mediante grupos de lectura, talleres de escritura y otras actividades participativas, ¿cómo han podido los bibliotecarios y usuarios de la biblioteca hacerle frente a diversos regímenes de violencia?  ¿Ven su trabajo en términos de construcción de paz, o algo distinto? ¿Hasta qué punto se puede hablar de la paz en comunidades afectadas por desigualdades sociales, violencias estructurales y nuevos conflictos que no se han paliado en tiempos marcados por el discurso del “posconflicto”? Esperamos que los participantes reflexionen acerca del papel de la biblioteca en la producción de plataformas alternativas de comunicación y expresión artística; la preservación de la memoria local; la inclusión de sujetos marginados; y los procesos de reconciliación en pequeña escala. De acuerdo con el tema del seminario, estos ejes temáticos también servirán como punto de partida para pensar la relación entre el patrimonio cultural y la construcción de paz en Colombia.</p>
 							</header>
