--- a/exhibit-a.html
+++ b/exhibit-a.html
@@ -57,12 +57,12 @@
 									<div class="box alt">
 										<div class="row gtr-50 gtr-uniform">
 											
-											<div class="col-4"><span class="image fit"><img src="images/book-circle.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/book-circle2.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/book-circle3.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/book-circle4.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/book-circle5.jpg" alt="" /></span></div>
-											<div class="col-4"><span class="image fit"><img src="images/book-circle6.jpg" alt="" /></span></div>
+											<div class="col-4"><span class="image fit"><a href= "https://bibliopaz.scholarslab.org/el-gallo/"><img src="images/book-circle.jpg" alt="" /></a></span></div>
+											<div class="col-4"><span class="image fit"><a href="https://bibliopaz.scholarslab.org/el-conejo/"><img src="images/book-circle2.jpg" alt="" /></a></span></div>
+											<div class="col-4"><span class="image fit"><a href="https://bibliopaz.scholarslab.org/las-morras/"><img src="images/book-circle3.jpg" alt="" /></a></span></div>
+											<div class="col-4"><span class="image fit"><a href="https://bibliopaz.scholarslab.org/la-carmelita/"><img src="images/book-circle4.jpg" alt="" /></a></span></div>
+											<div class="col-4"><span class="image fit"><a href="https://bibliopaz.scholarslab.org/la-hormiga/"><img src="images/book-circle5.jpg" alt="" /></a></span></div>
+											<div class="col-4"><span class="image fit"><a href="https://bibliopaz.scholarslab.org/cúcuta/"><img src="images/book-circle6.jpg" alt="" /></a></span></div>
 											
 										</div>
 									</div>
