edit landing page

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ layout: landing
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>"Libros en Lugar de Armas"<br />
-											 SALALM 2019</h2>
+								<a href="https://bibliopaz.scholarslab.org/mesa-redonda-2019"><h2>"Libros en Lugar de Armas"<br />
+											 SALALM 2019</h2></a>
 								                <p align="left">Las bibliotecas públicas colombianas han sido reconocidas como motores de paz en el país. Esta mesa invita a bibliotecari@s de distintas regiones para discutir qué significa construir paz desde la biblioteca. Mediante grupos de lectura, talleres de escritura y otras actividades participativas, ¿cómo han podido los bibliotecarios y usuarios de la biblioteca hacerle frente a diversos regímenes de violencia?  ¿Ven su trabajo en términos de construcción de paz, o algo distinto? ¿Hasta qué punto se puede hablar de la paz en comunidades afectadas por desigualdades sociales, violencias estructurales y nuevos conflictos que no se han paliado en tiempos marcados por el discurso del “posconflicto”? Esperamos que los participantes reflexionen acerca del papel de la biblioteca en la producción de plataformas alternativas de comunicación y expresión artística; la preservación de la memoria local; la inclusión de sujetos marginados; y los procesos de reconciliación en pequeña escala. De acuerdo con el tema del seminario, estos ejes temáticos también servirán como punto de partida para pensar la relación entre el patrimonio cultural y la construcción de paz en Colombia.</p>
 							</header>
 							
@@ -27,64 +27,4 @@ layout: landing
 						</div>
 					</section>
 
-				<!-- Two -->
-					<section id="two" class="wrapper alt style2">
-						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-							</div>
-						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
-							</div>
-						</section>
-					</section>
-
-				<!-- Three -->
-					<section id="three" class="wrapper style3 special">
-						<div class="inner">
-							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-							</header>
-							<ul class="features">
-								<li class="icon fa-paper-plane-o">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-headphones">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-heart-o">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-flag-o">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-							</ul>
-						</div>
-					</section>
+				
