--- a/gallo.html
+++ b/gallo.html
@@ -3,3 +3,26 @@ layout: page
 title: Biblioteca Pública Móvil El Gallo
 permalink: /el-gallo/
 ---
+<section>
+    <div class="box alt">
+        <div class="row gtr-50 gtr-uniform">
+            <div class="col-4"><iframe src="https://www.youtube.com/embed/5BgVhgHr0zY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+            <div class="col-4"><iframe src="https://www.youtube.com/embed/NX3UdLLklHY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+            <div class="col-4"><iframe src="https://www.youtube.com/embed/13-sT7PdmCk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+            <div class="col-4"><iframe src="https://www.youtube.com/embed/sh5m9roLTto" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+            <div class="col-4"><iframe src="https://www.youtube.com/embed/pwr4-7uZzbY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+            <div class="col-4"><iframe src="https://www.youtube.com/embed/w7dQsyn9-90" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div> 
+            <div class="col-4"><iframe src="https://www.youtube.com/embed/nAhSxR8mppI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+        </div>
+    </div>     
+</section>
+
+<section id="one" class="wrapper style 1 special">
+        <div class="inner">
+            <header class="major">
+                <a href="https://www.youtube.com/channel/UCZew_u-3hOSZVm7_s-1Idkg"><h2>Gallo Hagamos Cine</h2><br />
+                             </a>
+            
+    
+        </div>
+    </section>
