edit mesa redonda 2019

--- a/gallo.html
+++ b/gallo.html
@@ -1,5 +1,5 @@
 ---
-layout: page
+layout: sub-page
 title: Biblioteca Pública Móvil El Gallo
 permalink: /el-gallo/
 ---
@@ -13,6 +13,7 @@ permalink: /el-gallo/
             <div class="col-4"><iframe src="https://www.youtube.com/embed/pwr4-7uZzbY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
             <div class="col-4"><iframe src="https://www.youtube.com/embed/w7dQsyn9-90" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div> 
             <div class="col-4"><iframe src="https://www.youtube.com/embed/nAhSxR8mppI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+            
         </div>
     </div>     
 </section>
