change background image, update footer, foreground SALALM

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: landing
                             <h2>{{ site.title }}</h2>
                             
 							<ul class="actions special">
-								<li><a href="exhibit-a.html" class="button primary">Un Archivo Viviente</a></li>
+								<li><a href="https://bibliopaz.scholarslab.org/mesa-redonda-2019" class="button primary">SALALM 2019</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Más información</a>
