--- a/gallo.html
+++ b/gallo.html
@@ -1,7 +1,7 @@
 ---
 layout: sub-page
 title: Biblioteca Pública Móvil El Gallo
-permalink: /el-gallo/
+permalink: /gallo/
 ---
 <section>
     <div class="box alt">
