added media to gliberto.md

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@ layout: landing
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/victor-profile.jpg" alt="" /></div><div class="content">
-								<h2><a href="victor.md">Víctor Solís Camacho</a></h2>
+								<h2><a href="https://bibliopaz.scholarslab.org/bpm-gallo">Víctor Solís Camacho</a></h2>
 								<p>Bibliotecario de la BPM de Gallo (Tierralta, Córdoba).</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/gilberto-profile.jpg" alt="" /></div><div class="content">
-								<h2><a href="gilberto.md">Gilberto Pabón Sandoval</a></h2>
+								<h2><a href="https://bibliopaz.scholarslab.org/bpm-conejo">Gilberto Pabón Sandoval</a></h2>
 								<p>Bibliotecario de la BPM de Conejo (Fonseca, La Guajira).</p>
 							</div>
 						</section>
