--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: landing
 								<a href="https://bibliopaz.scholarslab.org/mesa-redonda-2019"><h2>"Libros en Lugar de Armas"<br />
 											 SALALM 2019</h2></a>
 								                <p align="left">Las bibliotecas públicas colombianas han sido reconocidas como motores de paz en el país. En esta mesa, bibliotecari@s de distintas regiones discutirán la cuestión de qué significa construir paz desde la biblioteca. Mediante grupos de lectura, talleres de escritura y otras actividades participativas, ¿cómo han podido los bibliotecarios y usuarios de la biblioteca hacerle frente a diversos regímenes de violencia?  ¿Ven su trabajo en términos de construcción de paz, o algo distinto? ¿Hasta qué punto se puede hablar de la paz en comunidades afectadas por desigualdades sociales, violencias estructurales y nuevos conflictos que no se han paliado en tiempos marcados por el discurso del “posconflicto”? El panel invita a que los participantes reflexionen acerca del papel de la biblioteca en crear plataformas alternativas de comunicación y expresión artística; preservar la memoria local; incluir a sujetos marginados; y fomentar procesos de reconciliación en pequeña escala. De acuerdo con el tema del Seminario, estos ejes temáticos también servirán como punto de partida para pensar la relación entre el patrimonio cultural y la construcción de paz en Colombia.</p>
-												<p align="left">En el congreso de SALALM 2019, estarán presentes el ex-director del proyecto Bibliotecas Públicas Móviles para la Paz, <a href="henry.md">Henry García Gaviria</a>, y cuatro Bibliotecarios para la Paz: <a href="gloria.md">Gloria Estella Nupán</a>, <a href= "victor.md">Víctor Solís Camacho</a>, <a href="gilberto.md">Gilberto Pabón Sandoval</a> y <a href="pablo.md">Pablo Iván Galvez Díaz</a>. Consulte la <a href="BPMgeneral.md">"Historia de las BPM"</a> y visite la página de cada presentador para aprender más sobre el impacto de las bibliotecas públicas en el proceso de paz.</p>
+												<p align="left">En el congreso de SALALM 2019, estarán presentes el ex-director del proyecto Bibliotecas Públicas Móviles para la Paz, <a href="henry.md">Henry García Gaviria</a>, y cuatro Bibliotecarios para la Paz: <a href="https://bibliopaz.scholarslab.org/bp-putymayo">Gloria Estella Nupán</a>, <a href= "https://bibliopaz.scholarslab.org/bpm-las-morras">Pablo Iván Galvez Díaz</a>, <a href="https://bibliopaz.scholarslab.org/bpm-conejo">Gilberto Pabón Sandoval</a> y <a href="https://bibliopaz.scholarslab.org/bpm-gallo">Víctor Solís Camacho</a>. Consulte la <a href="BPMgeneral.md">"Historia de las BPM"</a> y visite la página de cada presentador para aprender más sobre el impacto de las bibliotecas públicas en el proceso de paz.</p>
 											</header>
 						</div>
 					</section>
@@ -25,20 +25,20 @@ layout: landing
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/henry-profile.jpg" alt="" /></div><div class="content">
-								<h2><a href="henry.md">Henry García Gaviria</a></h2>
+								<h2><a href="https://bibliopaz.scholarslab.org/ex-director">Henry García Gaviria</a></h2>
 								<p>Ex-director del programa Bibliotecas Públicas Móviles para la Paz.</p>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/gloria-premio.jpg" alt="" /></div><div class="content">
-								<h2><a href="gloria.md">Gloria Estella Nupán</a></h2>
+								<h2><a href="https://bibliopaz.scholarslab.org/bp-putymayo">Gloria Estella Nupán</a></h2>
 								<p>Bibliotecaria de la Biblioteca Pública Luis Carlos Galán (La Hormiga, Putumayo).</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/victor-profile.jpg" alt="" /></div><div class="content">
-								<h2><a href="https://bibliopaz.scholarslab.org/bpm-gallo">Víctor Solís Camacho</a></h2>
-								<p>Bibliotecario de la BPM de Gallo (Tierralta, Córdoba).</p>
+							<div class="image"><img src="images/pablo-profile.jpg" alt="" /></div><div class="content">
+								<h2><a href="https://bibliopaz.scholarslab.org/bpm-las-morras">Pablo Iván Galvez Díaz</a></h2>
+								<p>Bibliotecario de la BPM de Las Morras (San Vicente del Caguán, Caquetá).</p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -47,10 +47,10 @@ layout: landing
 								<p>Bibliotecario de la BPM de Conejo (Fonseca, La Guajira).</p>
 							</div>
 						</section>
-						<section class="spotlight">
-							<div class="image"><img src="images/pablo-profile.jpg" alt="" /></div><div class="content">
-								<h2><a href="pablo.md">Pablo Iván Galvez Díaz</a></h2>
-								<p>Bibliotecario de la BPM de Las Morras (San Vicente del Caguán, Caquetá).</p>
+					    <section class="spotlight">
+							<div class="image"><img src="images/victor-profile.jpg" alt="" /></div><div class="content">
+								<h2><a href="https://bibliopaz.scholarslab.org/bpm-gallo">Víctor Solís Camacho</a></h2>
+								<p>Bibliotecario de la BPM de Gallo (Tierralta, Córdoba).</p>
 							</div>
 						</section>
 					</section>
