mesa redonda english

--- a/bpm-historia.html
+++ b/bpm-historia.html
@@ -80,14 +80,14 @@
 
 <h2 id="biblioteca-pública-móvil-las-morras">El inicio</h2>
 <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/jaramillo.png" alt="" /> <br>
-<i>El Alto Comisionado para la Paz, Sergio Jaramillo, y la ministra de Cultura, Mariana Garcés. Crédito: Archivo del Ministerio de Cultura</i></span>
+<i>El Alto Comisionado para la Paz, Sergio Jaramillo, y la ministra de cultura, Mariana Garcés. Crédito: Archivo del Ministerio de Cultura</i></span>
 El 25 de enero del 2017, la ministra de Cultura de Colombia, Mariana Garcés, y el Alto Comisionado para la Paz, Sergio Jaramillo, presentaron el modelo de Bibliotecas Móviles para la Paz que se implementó en 20 zonas veredales colombianas. El Ministerio de Cultura hizo la compra del modelo bibliotecario a la ONG francesa Bibliotecas Sin Fronteras invirtiendo dos millones de dólares para adquirir las instalaciones y costear su operación.</p>
  <br>&nbsp;<br>
 
 <h2 align="right"><id="biblioteca-pública-móvil-las-morras">Lugares</h2>
 <p><span class="image right"><img src="http://people.virginia.edu/~mav4n/BPMP/images/mapa02.png" alt="" /></span>
 A partir del 15 de febrero del 2017, 20 bibliotecas se instalaron en veredas de los municipios de  Dabeiba, Ituango y Remedios (Antioquia); Arauquita (Arauca); La Montañita y San Vicente del Caguán (Caquetá); Caldono y Miranda (Cauca); La Paz (Cesar); Tierralta (Córdoba); Riosucio (Chocó); San José del Guaviare (Guaviare); Fonseca (La Guajira); La Macarena, Mesetas y Vista Hermosa (Meta); Policarpa y Tumaco (Nariño); Puerto Asís (Putumayo), y Planadas (Tolima).
-<p>La mayoría de estas bibliotecas se instalaron en las llamadas zonas transitorias de normalización en el proceso de desarme con las FARC. Las bibliotecas móviles contribuyeron a la construcción de confianza en las comunidades por medio de contenidos culturales y la difusión de la lectura. Se aporto a la reconciliación del país con la oferta de espacios para el encuentro comunitario en torno a la cultura.
+<p>La mayoría de estas bibliotecas se instalaron cerca de las llamadas Zonas Veredales Transitorias de Normalización (ZVTN) en el proceso de desarme con las FARC. Las bibliotecas móviles contribuyeron a la construcción de confianza en las comunidades por medio de contenidos culturales y la difusión de la lectura. Se aportó a la reconciliación del país con la oferta de espacios para el encuentro comunitario en torno a la cultura.
 <br>Consultar <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/BPMzonas.pdf"><b> mapa</b></a> con mas detalle</p>
 <br>&nbsp;<br>
 
