add logos to index and englishindex

--- a/index.html
+++ b/index.html
@@ -102,19 +102,19 @@
 <section class="menu">
 <p align="center"><b>Con el apoyo insitucional de:</b>
  <br>&nbsp;<br>
-<a target="_blank" href="https://www.library.virginia.edu/"><img src="images/logouva.jpg" width="159" height="129" alt="" /></a>
-  |  <a target="_blank" href="http://salam.org"><img src="images/logosalalm.jpg" width="88" height="152" alt="" /> <br>
+<a target="_blank" href="https://www.library.virginia.edu/"><img src="http://people.virginia.edu/~mav4n/BPMP/images/logouva.jpg" width="159" height="129" alt="" /></a>
+  |  <a target="_blank" href="http://salam.org"><img src="http://people.virginia.edu/~mav4n/BPMP/images/logosalalm.jpg" width="88" height="152" alt="" /> <br>
 </section>
 <section class="menu">
 <p align="center"><b>Con el apoyo económico de:</b>
  <br>&nbsp;<br>
-<a target="_blank" href="https://globalinquiry.virginia.edu/"><img src="images/logocgi.png" width="183" height="100" alt="flower" /> |
-<a target="_blank" href="http://www.virginia.edu/vpr/"><img src="images/logoAHSS.jpg" width="140" height="145" alt="flower" /> 
+<a target="_blank" href="https://globalinquiry.virginia.edu/"><img src="http://people.virginia.edu/~mav4n/BPMP/images/logocgi.png" width="183" height="100" alt="flower" /> |
+<a target="_blank" href="http://www.virginia.edu/vpr/"><img src="http://people.virginia.edu/~mav4n/BPMP/images/logoAHSS.jpg" width="140" height="145" alt="flower" /> 
 </section>
 <section class="menu">
 <p align="center"><b>Con el apoyo técnico de:</b>
  <br>&nbsp;<br>
-<a target="_blank" href="https://scholarslab.lib.virginia.edu/"><img src="images/logolab.jpg" width="157" height="101" alt="flower" /> 
+<a target="_blank" href="https://scholarslab.lib.virginia.edu/"><img src="http://people.virginia.edu/~mav4n/BPMP/images/logolab.jpg" width="157" height="101" alt="flower" /> 
 </section>
 
       <!-- Footer -->
