change carmelitas to La Carmelita

--- a/bp-putumayo.html
+++ b/bp-putumayo.html
@@ -61,7 +61,7 @@
 
   <header>
     <h2>Gloria Estella Nupán Cañares</h2>
-	<b>Bibliotecaria para la Paz durante 2017 en la vereda de las Carmelitas en la municipalidad de Puerto Asis<br>
+	<b>Bibliotecaria para la Paz durante 2017 en la vereda de La Carmelita en la municipalidad de Puerto Asis<br>
 	del departamento de Putumayo,
 	a cinco horas de la bilioteca pública que dirige desde hace 25 años, <br>
 	la biblioteca Luis Carlos Galán Sarmiento, que está en la ciudad de la Hormiga<br>
@@ -136,7 +136,7 @@ Para entender el contexto politico de ese momento del otoño del 2016 en Colombi
 <br>&nbsp;<br>
 <img src="http://people.virginia.edu/~mav4n/BPMP/images/linea.png" width="100%" height="3" alt="" />
 <br>&nbsp;<br>
-<h2 id="biblioteca-pública-móvil-las-morras">Llegando a la Vereda de las Carmelitas ... </h2>
+<h2 id="biblioteca-pública-móvil-las-morras">Llegando a la Vereda de La Carmelita ... </h2>
 
 
 <div style=" text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 0px 0px;">
@@ -192,14 +192,14 @@ Por eso les dije en el campamento: “Hagamos la revolución, pero con la cabeza
 <img src="http://people.virginia.edu/~mav4n/BPMP/images/linea.png" width="100%" height="3" alt="" />
 <br>
 <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gloriamap.png" width="351" height="287" />
-<h4>¿Dónde queda la Vereda de las Carmelitas?</h4>
+<h4>¿Dónde queda la Vereda de La Carmelita?</h4>
 La vereda La Carmelita está ubicada en el municipio de Puerto Asís en el departamento de Putumayo. En 2016 esta vereda se convirtió en una de las 23 zonas veredales que sirvieron para la concentración y entrega de armas de las Farc y que hoy son Espacios Territoriales de Capacitación y Reincorporación.  Durante el otoño del 2017 fue Puerto de Asís una de las primeras municipalidades del país donde se empieza a repartir títulos de propiedad de tierras a campesinos del Putumayo, Este reparto fue una medida incentivadora para que los campesinos, quienes después de muchos años de cultivar coca, decidieran volver a la legalidad sembrando cultivos legales como cacao, caña, yuca y pimienta. Según fuentes gubernamentales para finales del 2017 se repartieron en el Putumayo cerca de 400 títulos de propiedad.
 
 <br>&nbsp;<br>
 <img src="http://people.virginia.edu/~mav4n/BPMP/images/linea.png" width="100%" height="3" alt="" />
 <br>&nbsp;<br>
 
- <h2 id="biblioteca-pública-móvil-las-morras">El trabajo en la Vereda de las Carmelitas</h2>
+ <h2 id="biblioteca-pública-móvil-las-morras">El trabajo en la Vereda de La Carmelita</h2>
    <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gloria8.png" width="300" height="200" />
    <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gloria7.png" width="300" height="200" />
   <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gloria4.png" width="200" height="233" />
@@ -207,7 +207,7 @@ La vereda La Carmelita está ubicada en el municipio de Puerto Asís en el depar
   <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gloria6.png" width="200" height="233" />
 </span><br>
 
-<p>La Biblioteca Móvil en la Carmelitas se instaló en un edificio del centro de la Vereda que los habitantes utilizan para sus eventos sociales. Allí convivieron durante un año con los habitantes de la vereda donde se organizaron talleres de escritura, se promoción la lectura entre los niños jóvenes y adultos. Se hicieron talleres de fotografía, ciclos de cine, talleres de computadoras. Se insertaron en la comunidad campañas diseñadas a nivel nacional de apoyo y que encontraron un gran eco entre los usuarios de la Biblioteca de la Carmelita. Ejemplos significativos de estas campañas fueron <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Gloriapazalbosque.pdf"><b>"Paz al Bosque"<b></a>, donde la Biblioteca Nacional de Colombia y el Instituto Caro y Cuervo unieron esfuerzos durante 2018 para promover el cambio social a través de la escritura creativa. La campaña <i>"Libros, Color y Selva"</i>, que además de libros para las bibliotecas, esta campaña ayudo en la primavera del 2018 a promover la lectura entre los más jóvenes a través del cuento y la poesía.
+<p>La Biblioteca Móvil en la Carmelita se instaló en un edificio del centro de la Vereda que los habitantes utilizan para sus eventos sociales. Allí convivieron durante un año con los habitantes de la vereda donde se organizaron talleres de escritura, se promoción la lectura entre los niños jóvenes y adultos. Se hicieron talleres de fotografía, ciclos de cine, talleres de computadoras. Se insertaron en la comunidad campañas diseñadas a nivel nacional de apoyo y que encontraron un gran eco entre los usuarios de la Biblioteca de la Carmelita. Ejemplos significativos de estas campañas fueron <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Gloriapazalbosque.pdf"><b>"Paz al Bosque"<b></a>, donde la Biblioteca Nacional de Colombia y el Instituto Caro y Cuervo unieron esfuerzos durante 2018 para promover el cambio social a través de la escritura creativa. La campaña <i>"Libros, Color y Selva"</i>, que además de libros para las bibliotecas, esta campaña ayudo en la primavera del 2018 a promover la lectura entre los más jóvenes a través del cuento y la poesía.
 <br>&nbsp;<br>
 Lo más importante de todo es que todas estas actividades culturales ayudaron a promover el diálogo … a escuchar y sobre todo a hablar. Y es bien conocido que la palabra bien ejercida ayuda a sanar.
 <br>&nbsp;<br>
@@ -215,7 +215,7 @@ Algo sobresaliente en la gestión de todas las <i>Bibliotecas Públicas Móviles
 La buena suerte que ayudo a mitigar su cese es que a partir de ese momento del 2017, Gloria fue una de las personas más activas del <a target="_blank" href="https://www.facebook.com/pg/bpmlacarmelita/posts/"</a>Grupo de Amigos</a> de esta biblioteca, ayudando a extender estos servicios bibliotecarios por las veredas de Putumayo en la campaña nacional del 2018 llamada <i>"Bibliotecas Públicas por las veredas y caminos de la paz"</i>
 <br>&nbsp;<br>
 
-Y la biblioteca de las Carmelitas paso a ser dirigida por Luis Alberto Narváez, otro de los bibliotecarios por la Paz de este proyecto.
+Y la biblioteca de La Carmelita paso a ser dirigida por Luis Alberto Narváez, otro de los bibliotecarios por la Paz de este proyecto.
 </p>
 <br>
 <img src="http://people.virginia.edu/~mav4n/BPMP/images/linea.png" width="100%" height="3" alt="" />
