--- a/bp-putumayoenglish.html
+++ b/bp-putumayoenglish.html
@@ -61,7 +61,7 @@
 
   <header>
     <h2>Gloria Estella Nupán Cañares</h2>
-Gloria was the Librarian for Peace during 2017 in the "vereda" of Carmelitas in the municipality of Puerto Asis
+Gloria was the Librarian for Peace during 2017 in the "vereda" of La Carmelita in the municipality of Puerto Asis
 <br>of the department of Putumayo, five hours from the public library that she has run for 25 years,
 <br>the Luis Carlos Galán Sarmiento Library. It is in the city of La Hormiga
 <br>in the municipality of the Guamuez Valley of the department of Putumayo.<br>
@@ -135,7 +135,7 @@ To understand the political context of that time in the fall of 2016 in Colombia
 <br>&nbsp;<br>
 <img src="http://people.virginia.edu/~mav4n/BPMP/images/linea.png" width="100%" height="3" alt="" />
 <br>&nbsp;<br>
-<h2 id="biblioteca-pública-móvil-las-morras">Arriving at the "vereda" <i>Las Carmelitas</i> ... </h2>
+<h2 id="biblioteca-pública-móvil-las-morras">Arriving at the "vereda" <i>La Carmelita</i> ... </h2>
 
 
 <div style=" text-align: left; text-indent: 0px; padding: 0px 0px 0px 0px; margin: 0px 0px 0px 0px;">
@@ -154,7 +154,7 @@ To understand the political context of that time in the fall of 2016 in Colombia
 <td style="border-width : 0px;">
 <iframe width="300" height="260" src="https://www.youtube.com/embed/TzVHWTevxxk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<br /><i><b>"The last group of guerrillas of the Southern Block arrives at Carmelita"</i> Noticias NC.  February 11, 2017</b></span></p>
+<br /><i><b>"The last group of guerrillas of the Southern Block arrives at La Carmelita"</i> Noticias NC.  February 11, 2017</b></span></p>
 </td>
 </tr>
 <tr valign="top">
@@ -189,13 +189,13 @@ To understand the political context of that time in the fall of 2016 in Colombia
 <img src="http://people.virginia.edu/~mav4n/BPMP/images/linea.png" width="100%" height="3" alt="" />
 <br>
 <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gloriamap.png" width="351" height="287" />
-<h4>Where is the "vereda" <i>Las Carmelitas</i>?</h4>
+<h4>Where is the "vereda" <i>La Carmelita</i>?</h4>
 The village of La Carmelita is in the municipality of Puerto Asís, department of Putumayo. In 2016 this "vereda" became one of the 23 rural areas that served for the concentration and delivery of weapons of the FARC and that today are Territorial Spaces of Training and Reincorporation. During the fall of 2017, Puerto de Asís was one of the first municipalities in the country where land titles to peasants of Putumayo began to be distributed. This distribution was an incentive for the peasants who, after many years of cultivating coca, decided to return to lawfulness by planting legal crops such as cocoa, cane, cassava and pepper. According to government sources, by the end of 2017, about 400 property titles were distributed in Putumayo.
 <br>&nbsp;<br>
 <img src="http://people.virginia.edu/~mav4n/BPMP/images/linea.png" width="100%" height="3" alt="" />
 <br>&nbsp;<br>
 
- <h2 id="biblioteca-pública-móvil-las-morras">Work in the "vereda" <i>Las Carmelitas</i></h2>
+ <h2 id="biblioteca-pública-móvil-las-morras">Work in the "vereda" <i>La Carmelita</i></h2>
    <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gloria8.png" width="300" height="200" />
    <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gloria7.png" width="300" height="200" />
   <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gloria4.png" width="200" height="233" />
@@ -203,7 +203,7 @@ The village of La Carmelita is in the municipality of Puerto Asís, department o
   <p><span class="image left"><img src="http://people.virginia.edu/~mav4n/BPMP/images/Gloria6.png" width="200" height="233" />
 </span><br>
 <p>
-The Mobile Library in the Carmelitas was installed in a building in the center of the Vereda that the inhabitants use for their social events. There the librarians lived for a year with the inhabitants of the village, organizing writing workshops, and promoting reading among young children and adults. There were photography workshops, film cycles, and computer workshops. Campaigns designed at the national level of support were inserted into the community and found a great echo among the users of the Carmelite Library. Significant examples of these campaigns were <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Gloriapazalbosque.pdf"><b><i>"Paz al Bosque" (Peace in the Forest)</i><b></a>,, in which the National Library of Colombia and the Caro y Cuervo Institute joined forces during 2018 to promote social change through creative writing. The campaign <i>"Books, Color and Jungle"</i>, which in addition to providing books for libraries, helped in the spring of 2018 to promote reading among the youngest through stories and poetry.
+The Mobile Library in La Carmelita was installed in a building in the center of the Vereda that the inhabitants use for their social events. There the librarians lived for a year with the inhabitants of the village, organizing writing workshops, and promoting reading among young children and adults. There were photography workshops, film cycles, and computer workshops. Campaigns designed at the national level of support were inserted into the community and found a great echo among the users of the Carmelite Library. Significant examples of these campaigns were <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Gloriapazalbosque.pdf"><b><i>"Paz al Bosque" (Peace in the Forest)</i><b></a>,, in which the National Library of Colombia and the Caro y Cuervo Institute joined forces during 2018 to promote social change through creative writing. The campaign <i>"Books, Color and Jungle"</i>, which in addition to providing books for libraries, helped in the spring of 2018 to promote reading among the youngest through stories and poetry.
 <br>&nbsp;<br>
 The most important thing of all is that all these cultural activities helped to promote dialogue ... listening and above all speaking. And it is well known that the well-exercised word helps to heal.
 <br>&nbsp;<br>
