--- a/bp-putumayo.html
+++ b/bp-putumayo.html
@@ -15,7 +15,7 @@
   <!--[if lte IE 8]><script src="/js/ie/html5shiv.js"></script><![endif]-->
   <link rel="canonical" href="/mesa-redonda-2019">
   <link rel="stylesheet" href="https://bibliopaz.scholarslab.org/assets/css/main.css" />
-  <link rel="stylesheet" href="http://people.virginia.edu/~mav4n/BPMP/css/piedefoto.css" />
+  <link rel="stylesheet" href="http://bibliopaz.scholarslab.org/assets/css/piedefoto.css" />
  <link rel="alternate" type="application/rss+xml" title="Bibliotecas para la Paz" href="/feed.xml">
 </head>
 
