--- a/bp-putumayo.html
+++ b/bp-putumayo.html
@@ -27,7 +27,7 @@
 
       <!-- Header -->
   <header id="header">
-  <h3><a href="https://bibliopaz.scholarslab.org/bpm-putumayonglish.html">English</a> |  <a href="https://bibliopaz.scholarslab.org/index.html">Bibliotecas para la Paz</a></h3>
+  <h3><a href="https://bibliopaz.scholarslab.org/bp-putumayoenglish.html">English</a> |  <a href="https://bibliopaz.scholarslab.org/index.html">Bibliotecas para la Paz</a></h3>
  <nav id="nav">
       <ul>
 	  <li class="special">
