--- a/ex-directorenglish.html
+++ b/ex-directorenglish.html
@@ -14,8 +14,8 @@
   <meta name="description" content="A living archive. ">
   <!--[if lte IE 8]><script src="/js/ie/html5shiv.js"></script><![endif]-->
   <link rel="canonical" href="/mesa-redonda-2019">
-  <link rel="stylesheet" href="https://bibliopaz.scholarslab.org/assets/css/main.css" />
-  <link rel="stylesheet" href="http://people.virginia.edu/~mav4n/BPMP/css/piedefoto.css" />
+  <link rel="stylesheet" href="/assets/css/main.css" />
+  <link rel="stylesheet" href="/assets/css/piedefoto.css" />
  <link rel="alternate" type="application/rss+xml" title="Libraries for Peace" href="/feed.xml">
 </head>
 
