--- a/bpm-conejo.html
+++ b/bpm-conejo.html
@@ -63,7 +63,7 @@
     <h2>Gilberto Pabón Sandoval</h2>
 	<b>Bibliotecario para la Paz en el corregimiento de Conejo, Fonseca, La Guajira, Colombia<br>
 	desde el 26 de febrero del 2017 al 23 de diciembre del 2017</i><br>
-	y en el municipio Los Robles La Paz del Departamento Cesar en el Área metropolitana de Valledupar<br>
+	y en Robles, municipio de La Paz del Departamento de Cesar en el Área metropolitana de Valledupar<br>
 	desde el 13 de febrero del 2018 al 22 de diciembre del 2018.
 
   </header>
@@ -77,10 +77,10 @@
 <ul>
 Gilberto nos cuenta:<br>
 <i>"Soy gestor cultural y promotor de lectura con estudios en derecho de la Universidad Libre.
-<p>Mi experiencia se inicio en la Corporación Cultural Biblioteca Pública Julio Pérez Ferrero, de la ciudad de Cúcuta Norte de Santander. Desarrollando funciones como tutor y promotor de lectura en la <i>Red Municipal de Lectura y Escritura de Cúcuta</i>, liderada por la Alcaldía Municipal de San José de Cúcuta, la cual tiene como objetivo promover la lectura y la escritura en niños, jóvenes, adultos y adultos mayores de la ciudad de Cúcuta, con un enfoque particular en la población en condición de vulnerabilidad de derechos.
+<p>Mi experiencia se inició en la Corporación Cultural Biblioteca Pública Julio Pérez Ferrero, de la ciudad de Cúcuta, Norte de Santander. Desarrollando funciones como tutor y promotor de lectura en la <i>Red Municipal de Lectura y Escritura de Cúcuta</i>, liderada por la Alcaldía Municipal de San José de Cúcuta, la cual tiene como objetivo promover la lectura y la escritura en niños, jóvenes, adultos y adultos mayores de la ciudad de Cúcuta, con un enfoque particular en la población en condición de vulnerabilidad de derechos.
 </p><p>Logramos, en el marco de esta importante y valiosa iniciativa, diseñar servicios de extensión bibliotecaria para comunidades de distintos barrios de Cúcuta, crear actividades innovadoras de promoción de la lectura y la cultura como las "Lunadas Literarias" que fueron reconocidas como ejemplos para el país por parte del Ministerio de Cultura de Colombia, diseñar actividades educativas y culturales en torno al libro y al cine desde la "Biblioexpress" (una biblioteca móvil que recorría los barrios y municipios cercanos de la ciudad de Cúcuta).
-</p><p>Igualmente, soy fundador de la Corporación Cultural de Lectura y Escritura del municipio Los Patios. Participe del proyecto de Bibliotecas Públicas Móviles del Ministerio de Cultura en el año 2017, también estuve como bibliotecario en el proyecto bibliotecas públicas por las veredas y los caminos de la paz desarrollado en año 2018 por el Ministerio de Cultura".
-</p><p>En la actualidad me desempeño como coordinador de la Corporación Cultural de Lectura y Escritura. En planes estratégicos de  lectura y escritura con carácter innovador.
+</p><p>Igualmente, soy fundador de la Corporación Cultural de Lectura y Escritura del municipio Los Patios. Participé del proyecto de Bibliotecas Públicas Móviles del Ministerio de Cultura en el año 2017, también estuve como bibliotecario en el proyecto Bibliotecas Públicas por las Veredas y los Caminos de la Paz desarrollado en el año 2018 por el Ministerio de Cultura".
+</p><p>En la actualidad me desempeño como coordinador de la Corporación Cultural de Lectura y Escritura. En planes estratégicos de lectura y escritura con carácter innovador.
 </i>
 </ul>
 </td>
@@ -96,7 +96,7 @@ Gilberto nos cuenta:<br>
   </iframe><br><i>FARC construyendo memoria en Conejo</i>
   <br>
 <h4>¿Dónde queda Conejo?</h4>
-El corregimiento Conejo se encuentra en el municipio de Fonseca dentro del departamento de La Guajira. Tiene alrededor de 2500 habitantes y es el corregimiento más grande de e los tres que tiene Fonseca. Tiene tierras muy fértiles por lo que la economía principal es la agricultura y la ganadería. Destaca la producción de café y es famoso en la zona el  <a target="_blank" href="http://www.fonseca-guajira.gov.co/soyfestivaldelcafe/Paginas/default.aspx"><b>Festival del Café</b></a> que se celebra cada diciembre desde hace 16 años. Debido a su proximidad con la frontera de Venezuela, Conejo fue una de las principales vías para pasar a Venezuela y también fue una región donde los guerrilleros se abastecían de provisiones. Fue precisamente en febrero del 2016 cuando Conejo tuvo toda la atención internacional debido que este corregimiento fue el elegido por la <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/Documents/Conejo1Farc.pdf"><b>FARC</b></a> para hacer presencia pública por primera vez y sociabilizar con las tropas estacionadas en esta región.
+El corregimiento Conejo se encuentra en el municipio de Fonseca dentro del departamento de La Guajira. Tiene alrededor de 2500 habitantes y es el corregimiento más grande de los tres que tiene Fonseca. Tiene tierras muy fértiles por lo que la economía principal es la agricultura y la ganadería. Destaca la producción de café y es famoso en la zona el  <a target="_blank" href="http://www.fonseca-guajira.gov.co/soyfestivaldelcafe/Paginas/default.aspx"><b>Festival del Café</b></a> que se celebra cada diciembre desde hace 16 años. Debido a su proximidad con la frontera de Venezuela, Conejo fue una de las principales vías para pasar a Venezuela y también fue una región donde los guerrilleros se abastecían de provisiones. Fue precisamente en febrero del 2016 cuando Conejo tuvo toda la atención internacional debido a que este corregimiento fue el elegido por las <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/Documents/Conejo1Farc.pdf"><b>FARC</b></a> para hacer presencia pública por primera vez y sociabilizar con las tropas estacionadas en esta región.
 <br>&nbsp;<br>
 <img src="http://people.virginia.edu/~mav4n/BPMP/images/linea.png" width="100%" height="3" alt="" />
 <br>&nbsp;<br>
@@ -112,8 +112,8 @@ El corregimiento Conejo se encuentra en el municipio de Fonseca dentro del depar
 <iframe width="400" height="250" src="https://www.youtube.com/embed/jxMMxYMTrSQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <br>Presentación del proyecto: <br>"Bibliotecas Públicas por las veredas y los caminos de la paz" <br>15 de mayo 2018 ; (3' 56")
 </span>
-"Cuando llego la Biblioteca Pública Móvil de la mano de Gilberto "<i>Llegó como un milagro</i>", dicen sus moradores. Un milagro que ha logrado reunir a toda la comunidad en torno a los libros, las tabletas y los computadores.
-Esta biblioteca cuenta con su propia Escuela de Música Vallenata, un semillero donde niños y jóvenes aprenden a tocar acordeón, guitarra, caja y guacharaca, Además, con la ayuda de un grupo de artistas y de la comunidad, vistió de color las calles del corregimiento con 20 murales que cuentan la historia de la localidad".
+"Cuando llegó la Biblioteca Pública Móvil de la mano de Gilberto "<i>Llegó como un milagro</i>", dicen sus moradores. Un milagro que ha logrado reunir a toda la comunidad en torno a los libros, las tabletas y los computadores.
+Esta biblioteca cuenta con su propia Escuela de Música Vallenata, un semillero donde niños y jóvenes aprenden a tocar acordeón, guitarra, caja y guacharaca. Además, con la ayuda de un grupo de artistas y de la comunidad, vistió de color las calles del corregimiento con 20 murales que cuentan la historia de la localidad".
 <br><i>Biblioteca Nacional, septiembre del 2018</i>
 <br>
 <center>
@@ -161,7 +161,7 @@ Esta biblioteca cuenta con su propia Escuela de Música Vallenata, un semillero 
 <center>
 <h4>La Canción del premio: SIN MIEDO;</h4><br>
 I<br>
-Hay que bonito los tiempos de ayer, donde no había violencia<br>
+Ay que bonito los tiempos de ayer, donde no había violencia<br>
 Ni tampoco había guerra, todo era felicidad<br>
 Dios mío tanta destrucción porque, porque hay tanta tristeza<br>
 Y nuestra madre tierra no soporta más<br>
