--- a/videostreamingenglish.html
+++ b/videostreamingenglish.html
@@ -27,7 +27,7 @@
 
       <!-- Header -->
   <header id="header">
- <h3><a href="https://bibliopaz.scholarslab.org/videostreaming.html">Casrellano</a> |
+ <h3><a href="https://bibliopaz.scholarslab.org/videostreaming.html">Castellano</a> |
   <a href="https://bibliopaz.scholarslab.org/indexenglish.html">Libraries for Peace</a></h3>
  <nav id="nav">
       <ul>
