--- a/bp-putumayo.html
+++ b/bp-putumayo.html
@@ -61,11 +61,11 @@
 
   <header>
     <h2>Gloria Estella Nupán Cañares</h2>
-	<b>Bibliotecaria para la Paz durante 2017 en la vereda de La Carmelita en la municipalidad de Puerto Asis<br>
+	<b>Bibliotecaria para la Paz durante 2017 en la vereda de La Carmelita en el municipio de Puerto Asís<br>
 	del departamento de Putumayo,
 	a cinco horas de la bilioteca pública que dirige desde hace 25 años, <br>
 	la biblioteca Luis Carlos Galán Sarmiento, que está en la ciudad de la Hormiga<br>
-	en la municipalidad del Valle del Guamuez del departamento de Putumayo.
+	en el municipio de Valle del Guamuez del departamento de Putumayo.
 	<br>.
 	</i><br>
 
@@ -80,11 +80,11 @@
 <td><center><img align src="http://people.virginia.edu/~mav4n/BPMP/images/Gloria.png" width="300" height="229" /></center><br>
 <ul>
 <b>Gloria nos cuenta:<br>
-"<i>Estudie Licenciatura en básica primaria con énfasis en derechos humanos; ocho semestres psicología social y comunitaria con la universidad Nacional Abierta y a distancia;  bibliotecaria por vocación y producto de los diferentes talleres y capacitaciones que desde  la Biblioteca Nacional y el Ministerio de Cultura brindan a bibliotecarios perteneciente a  la Red nacional de bibliotecas públicas, conocimientos que han aportado  para vincular a personas voluntarias en procesos de lectura a través de las cuales se fortalece el tejido social fragmentado por las diferentes problemática que azotan al municipio Valle del Guamuez y departamento Putumayo.
+"<i>Estudié Licenciatura en básica primaria con énfasis en derechos humanos; ocho semestres de psicología social y comunitaria con la universidad Nacional Abierta y a distancia; bibliotecaria por vocación y producto de los diferentes talleres y capacitaciones que desde la Biblioteca Nacional y el Ministerio de Cultura brindan a bibliotecarios pertenecientes a la Red Nacional de Bibliotecas Públicas, conocimientos que han aportado  para vincular a personas voluntarias en procesos de lectura a través de las cuales se fortalece el tejido social fragmentado por las diferentes problemáticas que azotan al municipio de Valle del Guamuez y al departamento Putumayo.
 <br>&nbsp;<br>
-Vinculada a la biblioteca Publica Luis Carlos Galán desde 1993, donde he tenido la oportunidad de trabajar con diferentes grupos poblacionales entre ellos, niños, jóvenes, adultos ubicados en zonas rurales y urbanas.
+Vinculada a la biblioteca Pública Luis Carlos Galán desde 1993, donde he tenido la oportunidad de trabajar con diferentes grupos poblacionales entre ellos, niños, jóvenes, adultos ubicados en zonas rurales y urbanas.
 <br>&nbsp;<br>
-El mayor objetivo, como bibliotecaria  ha sido fomentar el dialogo, el buen uso del tiempo libre, el autoaprendizaje  y la sana convivencia entre la comunidad, a partir de la lectura un libro, la observación  de una película,  la narración de historias y vivencias personales; Trabajo que no he realizado sola si no  junto con el Grupo Amigos de la Biblioteca (GAB) creado en el 2004, con quienes hemos liderado  un programa de Radio,  una Revista literaria y la extensión de  los servicios bibliotecarios a las zonas más apartadas del casco Urbano. Actualmente desde la biblioteca nos hemos enfocados en trabajar con primera infancia en zona rural.
+El mayor objetivo como bibliotecaria ha sido fomentar el dialogo, el buen uso del tiempo libre, el autoaprendizaje  y la sana convivencia entre la comunidad, a partir de la lectura de un libro, la observación  de una película, la narración de historias y vivencias personales; Trabajo que no he realizado sóla, sino junto con el Grupo de Amigos de la Biblioteca (GAB) creado en el 2004, con quienes hemos liderado un programa de Radio, una Revista literaria y la extensión de los servicios bibliotecarios a las zonas más apartadas del casco urbano. Actualmente desde la biblioteca nos hemos enfocado en trabajar con primera infancia en zona rural.
 </b></i>
 </ul>
 
@@ -102,23 +102,23 @@ El mayor objetivo, como bibliotecaria  ha sido fomentar el dialogo, el buen uso 
 </b></i></span></span>
 <h4 id="biblioteca-pública-móvil-las-morras">Gloria, bibliotecaria de la Hormiga</h4>
 <b>
-Gloria <b>ha construido paz </b>desde los 16 años cuando se fue al colegio desde la casa de sus padres situada en una vereda del Valle de Guamuez, cansada del asedio que le producía estar en medio de la guerrilla, los paramilitares y el ejército. Al colegio fue por las noches ya que de día trabajaba en la casa de un amigo de su papa que se convirtió en el alcalde del pueblo y la nombro a ella regenta de un salón en donde se encontraba lo que entonces llamaban "la biblioteca".
+Gloria <b>ha construido paz </b>desde los 16 años cuando se fue al colegio desde la casa de sus padres situada en una vereda del Valle de Guamuez, cansada del asedio que le producía estar en medio de la guerrilla, los paramilitares y el ejército. Al colegio fue por las noches ya que de día trabajaba en la casa de un amigo de su papá que se convirtió en el alcalde del pueblo y la nombró a ella regenta de un salón en donde se encontraba lo que entonces llamaban "la biblioteca".
 <br>&nbsp;<br>
-En esa "biblioteca" desde 1993 aprendió a ser bibliotecaria profesional de forma autogestionada, siguiendo primero sus intuiciones y aprovechando luego todo tipo de apoyo de capacitación desde el Ministerio de Cultura, sobre todo a partir de 1997 cuando la "biblioteca" se convirtió en la biblioteca Luis Carlos Galán Sarmiento. Para 2004 cuando la biblioteca ya sobrepasaba los 5000 libros (1 libro por cada 10 habitantes) y los 200 usuarios diarios, la biblioteca se integró en la red nacional de bibliotecas públicas. Debido a la llegada del internet [y de los paramilitares] esos 200 usuarios se redujeron a 70. Es en este momento que decidido llevar la biblioteca a las veredas (18 para 2004) en donde las visitas mensuales se convirtieron en verdaderos acontecimientos culturales para las pequeñas comunidades.
+En esa "biblioteca" desde 1993 aprendió a ser bibliotecaria profesional de forma autogestionada, siguiendo primero sus intuiciones y aprovechando luego todo tipo de apoyo de capacitación desde el Ministerio de Cultura, sobre todo a partir de 1997 cuando la "biblioteca" se convirtió en la biblioteca Luis Carlos Galán Sarmiento. Para 2004 cuando la biblioteca ya sobrepasaba los 5000 libros (1 libro por cada 10 habitantes) y los 200 usuarios diarios, la biblioteca se integró en la Red Nacional de Bibliotecas Públicas. Debido a la llegada del internet [y de los paramilitares] esos 200 usuarios se redujeron a 70. Fue en este momento que decididó llevar la biblioteca a las veredas (18 para 2004) en donde las visitas mensuales se convirtieron en verdaderos acontecimientos culturales para las pequeñas comunidades.
 <br>&nbsp;<br>
-Su labor no solo ha sido estar entre libros, sino la de promover la paz a través de ejercitar el dialogo y la sana convivencia entre la comunidad a partir del "libro".
+Su labor no solo ha sido estar entre libros, sino la de promover la paz a través del diálogo y la sana convivencia entre la comunidad a partir del libro.
 <br>&nbsp;<br>
-"<i>Retrocediendo a la época en que yo vivía allá …"</i> dice Jorge Andrés Cancimance, un joven de 27 años, miembro del Grupo Amigos de la Biblioteca-" <i>recuerdo que las posibilidades que me ofrecía el contexto eran ser guerrillero o ser paramilitar. Pero cuando fui usuario de la biblioteca siendo niño, los cuentos y las lecturas me incentivaron a buscar la posibilidad de estudiar en Bogotá y así lo hice". Hoy en dia es licenciado de Trabajo Social en la Universidad Nacional de Colombia</i>
+"<i>Retrocediendo a la época en que yo vivía allá …"</i> dice Jorge Andrés Cancimance, un joven de 27 años, miembro del Grupo Amigos de la Biblioteca y profesor de antropología en la Universidad Nacional de Colombia -" <i>recuerdo que las posibilidades que me ofrecía el contexto eran ser guerrillero o ser paramilitar. Pero cuando fui usuario de la biblioteca siendo niño, los cuentos y las lecturas me incentivaron a buscar la posibilidad de estudiar en Bogotá y así lo hice".</i>
 <br>&nbsp;<br>
-Para sobreponerse a las vicisitudes del conflicto [se vieron obligados a disminuir muchos servicios debido al control paramilitar en esa zona del 'bloque sur' de la Casa Castaño entre 2000-2005) tuvieron que experimentar con nuevas estrategias, como la de crear el Grupo de Amigos de la Biblioteca en 2004, fundar la revista Khatarsis (concebida como un espacio en el que las personas pudieran expresar "cosas que el conflicto armado no les permitía" y que los paramilitares ignoraron desde el principio por no ser "peligrosa") o fundar la radio "Los hormigueros" donde se retrasmitían programas culturales para promover la lectura.
+Para sobreponerse a las vicisitudes del conflicto (se vieron obligados a disminuir muchos servicios debido al control paramilitar en esa zona del 'bloque sur' de la Casa Castaño entre 2000-2005) tuvieron que experimentar con nuevas estrategias, como la de crear el Grupo de Amigos de la Biblioteca en 2004, fundar la revista Katharsis (concebida como un espacio en el que las personas pudieran expresar "cosas que el conflicto armado no les permitía" y que los paramilitares ignoraron desde el principio por no ser "peligrosa") o fundar el programa radial "El Hormiguero" donde se trasmitían programas culturales para promover la lectura.
 <br>&nbsp;<br>
-Había que ganar espacio a la guerra facilitando alternativas (ciclos de cine foro, desarrollar tertulias literarias, abrir convocatorias de cuentos en torno a la vida en el municipio o contar con la posibilidad de tener un programa radial dedicado a la música, el radio teatro o la poesía); alternativas especialmente dirigidas a los niños y jóvenes sin llamar la atención para sobrevivir a los años del plomo.
+Había que ganarle espacio a la guerra facilitando alternativas (ciclos de cine foro, desarrollar tertulias literarias, abrir convocatorias de cuentos en torno a la vida en el municipio o contar con la posibilidad de tener un programa radial dedicado a la música, el radio teatro o la poesía); alternativas especialmente dirigidas a los niños y jóvenes sin llamar la atención para sobrevivir a los años del plomo.
 <br>&nbsp;<br>
 En 2014 su labor y la de todo su equipo junto al Grupo de Amigos fué reconocida al recibir el prestigioso premio Nacional de Bibliotecas Públicas Daniel Samper Ortega en su primera convocatoria. Gloria fue a su vez incluida entre las 100 mujeres más influyentes y transformadoras de Colombia.
 <br>&nbsp;<br>
-Toda esta labor contribuyó a que Gloria fuera invitada a finales del 2016, a participar en el proyecto de Bibliotecas para la Paz para lo que tomó una excedencia de un año en sus funciones como bibliotecaria en la Hormiga y así, centrarse en la difusión de este Proyecto por tierras del Putumayo.
+Toda esta labor contribuyó a que Gloria fuera invitada a finales del 2016, a participar en el proyecto de Bibliotecas para la Paz para lo que tomó una excedencia de un año en sus funciones como bibliotecaria en la Hormiga y así, centrarse en la difusión de este proyecto por tierras del Putumayo.
 <br>&nbsp;<br>
-Su Biblioteca Móvil para la Paz desplegada en la Zona Veredal Transitoria de Normalización (ZVTN) de La Carmelita en Puerto Asís, Putumayo, fue la primera en ser desplegada. Para remarcar la importancia de este proyecto el entonces presidente Juan Manuel Santos dignifico el evento con su visita y escucho el informe de Gloria en donde entre otras cosas narraba uno de los sueños que tenía desde la más tierna juventud: "<i><b>Siempre el sueño es <u>que antes de que pase</u> por nuestras casas, por nuestras veredas, por nuestras fincas un hombre armado, que sea una persona con libros."</b> </i>
+Su Biblioteca Móvil para la Paz desplegada cerca de la Zona Veredal Transitoria de Normalización (ZVTN) de La Carmelita en Puerto Asís, Putumayo, fue la primera en ser desplegada. Para remarcar la importancia de este proyecto, el entonces presidente Juan Manuel Santos dignificó el evento con su visita y escuchó el informe de Gloria en donde entre otras cosas narraba uno de los sueños que tenía desde la más tierna juventud: "<i><b>Siempre el sueño es <u>que antes de que pase</u> por nuestras casas, por nuestras veredas, por nuestras fincas un hombre armado, que sea una persona con libros."</b> </i>
 <br>
 ¡¡¡Que así sea y que dure!!!
 <br>&nbsp;<br>
@@ -130,7 +130,7 @@ Este texto está entresacado de los siguientes artículos:<br>
 <li>María Ximena Duque, <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Gloria5.pdf"><b>Premio gigante para la biblioteca de La Hormiga en Putumayo".</a> <i>El Tiempo.</i >21 de agosto 2014
 <li>Cristian Valencia, <a target="_blank" href="http://people.virginia.edu/~mav4n/BPMP/documents/Gloria6.pdf"><b>Crónica: una bibliotecaria en el Putumayo".</a> <i>Revista Arcadia.</i >17 de abril 2018
 <br>&nbsp;<br>
-Para entender el contexto politico de ese momento del otoño del 2016 en Colombia pueden leer :<br>
+Para entender el contexto político de ese momento del otoño del 2016 en Colombia pueden leer :<br>
 <li><a target="_blank" href="https://issuu.com/leidy731/docs/especial_semana_1795b_de_paz"><b>Especial Semana por la Paz".</a> <i>Revista Semana.</i >17 de septiembre del 2016; edición número 1795.
 </ul>
 <br>&nbsp;<br>
@@ -143,14 +143,14 @@ Para entender el contexto politico de ese momento del otoño del 2016 en Colombi
 <table width="100%" border="1" cellpadding="1" cellspacing="1" style="background-color: #a5a09d">
 <tr valign="top">
 <td style="border-width : 0px;">
-<h2 id="biblioteca-pública-móvil-las-morras">Los guerrilleros ... </h2>
+<h2 id="biblioteca-pública-móvil-las-morras">Los ex-guerrilleros ... </h2>
 </td>
 </tr>
 <tr valign="top">
 <td style="border-width : 0px;">
 <iframe width="300" height="260" src="https://rcnhd.cloudvideo.com.co/html5/html5lib/v2.75.1/mwEmbedFrame.php/p/102/uiconf_id/23448285/entry_id/0_ld8le8m9?wid=_102&iframeembed=true&playerId=kaltura_player_1549309444&entry_id=0_ld8le8m9" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <span style=" font-size: 10pt; font-family: 'Arial', 'Helvetica', sans-serif; font-style: normal; font-weight: normal; color: #000000; background-color: transparent; text-decoration: none;">
-<br><i><b>"Cerca de 300 guerrilleros llegaron a zona  de concentración en La Carmelita, Putumayo"</i> <br>Noticias RCN.com, 6 Febrero 2017</b></span></p>
+<br><i><b>"Cerca de 300 guerrilleros llegaron a zona de concentración en La Carmelita, Putumayo"</i> <br>Noticias RCN.com, 6 Febrero 2017</b></span></p>
 </td>
 <td style="border-width : 0px;">
 <iframe width="300" height="260" src="https://www.youtube.com/embed/TzVHWTevxxk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
