--- a/bp-putumayoenglish.html
+++ b/bp-putumayoenglish.html
@@ -27,7 +27,7 @@
 
       <!-- Header -->
   <header id="header">
-  <h3><a href="https://bibliopaz.scholarslab.org/bpm-putmayo.html">Castellano</a> |  <a href="https://bibliopaz.scholarslab.org/indexenglish.html">Bibliotecas para la Paz</a></h3>
+  <h3><a href="https://bibliopaz.scholarslab.org/bp-putumayo.html">Castellano</a> |  <a href="https://bibliopaz.scholarslab.org/indexenglish.html">Bibliotecas para la Paz</a></h3>
  <nav id="nav">
       <ul>
 	  <li class="special">
